# agent-history

./: .coveragerc  .coveragerc.template  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE-saved.md  CLAUDE.md  EXAMPLES.md  Makefile  README.md  SKILL.md  TESTING.md  TODO.md  agent-history  ah.py  claude-history  claude-sessions  pyproject.toml  pytest.ini  test_claude_history.py
.claude/agents/: cli-fixer.md  test-developer.md
.github/workflows/: ci.yml  lint.yml
agent_history/: __init__.py  __main__.py  api.py  fluent.py  types.py
agent_history/adapters/: __init__.py  inventory.py  remote.py
agent_history/backends/: __init__.py  claude.py  codex.py  gemini.py  pi.py  registry.py  ssh.py  web.py
agent_history/cli/: __init__.py  constants.py  orchestrator.py  parser.py
agent_history/core/: __init__.py  conversation.py  ndjson.py  stats.py  workspaces.py
agent_history/export/: __init__.py  html.py  manifest.py  markdown.py  ndjson.py  source.py  splitting.py
agent_history/handlers/: __init__.py  base.py  dispatcher.py  export.py  home.py  list.py  project.py  stats.py  stubs.py  utilities.py
agent_history/output/: __init__.py  formatter.py
agent_history/scope/: __init__.py  cache.py  context.py  home_resolver.py  resolver.py  types.py
agent_history/storage/: config.py  metrics.py
agent_history/utils/: dates.py  paths.py  platform.py  workspace_ref.py
docker/: Dockerfile.node  Dockerfile.runner  README.md  docker-compose.yml
docker/scripts/: create-users.sh  entrypoint-node.sh  entrypoint-runner.sh  generate-sessions.sh  run-e2e-coverage.sh  setup-ssh-client.sh
docs/: AGENTS.md  COOKBOOK.md  DESIGN.md  FORMAT_REFACTORING_REVIEW.md  GEMINI-FORMAT.md  JSONL-FORMAT.md  ORTHOGONAL-TESTS.md  PLAN-codex-support.md  README.md  REFACTORING_REVIEW.md  RHODES_REVIEW.md  TROUBLESHOOTING.md  USAGE.md  agent-history-code-map.md  agent-history-process-image.md  claude-format.md  code-review-rhodes.md  codex-format.md  context_compaction_analysis.md  cookbook.md  exploration-log.md  exploratory-testing-report-2026-01-09.md  gemini-format.md  pi-format.md  troubleshooting.md  unified_json_schema.dot  unified_json_schema.md  usage.md
docs/analysis/: cli-command-patterns.md  cli-redesign-spec.md  competitive-analysis.md
docs/design-v2/: code-reuse-mapping.md  pipeline-architecture.md  scope-resolution-v2.md
docs/other/: claude-collaboration-playbook.md  context-cli-test-restoration.md  exploration-log.md  retrospective.md
docs/reviews/: AGENT_HISTORY_SPEC_DRIFT.md
docs/schema/: unified-json-schema.dot
docs/specs/: README.md  agent-history-spec.md  cli-spec.md  todo.md
docs/testing/: docker-e2e.md  post-v1-prompt.md  testing-continuation.md  testing-prompt.md  testing-review.md  testing-strategy.md  v1-status.md
docs/user/: troubleshooting.md  usage.md
reviews/: codex-support-review-3.md  codex-support-review.md  gemini-assumptions-validation.md  gemini-extensibility-review.md  test-infra-review-4.md  test-infra-review-5.md  test-infra-review-6.md  test-infra-review.md
scripts/: check_complexity.py  coverage-orchestrator.py  coverage.config.template  coverage_startup.py  run-coverage.py  run-tests.ps1  time-analysis.py  update_readme_help.py  validate_grouping.py  validate_invariants.py  validate_stats_accuracy.py
tests/: __init__.py  conftest.py  legacy_cli.py
tests/cli/: conftest.py
tests/core/: conftest.py  test_claude_parser.py  test_context_consistency.py  test_cross_home_guard.py  test_error_messages.py  test_export_options.py  test_home_show.py  test_output_format.py  test_parity_export.py  test_parity_flags.py  test_parity_gemini_index.py  test_parity_non_local_homes.py  test_project_list_format.py  test_session_list_output.py  test_stats_alias_filters.py  test_stats_token_dedup.py  test_workspace_filter.py  test_ws_show.py  test_ws_status.py
tests/e2e_docker/: __init__.py  conftest.py  helpers.py  test_alias_commands.py  test_multi_agent.py  test_multi_home.py  test_multi_user.py  test_remote_operations.py  test_ssh_connection.py  test_ssh_remote.py  test_stats_sync.py
tests/fixtures/: expected_values_extended.json
tests/formats/: test_codex_parser.py  test_gemini_parser.py
tests/helpers/: assertions.py  cli.py  gap_helpers.py  module_loader.py  paths.py  session_builders.py  workspace_paths.py
tests/integration/: test_cli_flags.py  test_e2e_cli.py  test_e2e_codex.py  test_e2e_gemini.py  test_e2e_stats_alias.py  test_e2e_stats_more.py  test_real_local.py  test_wsl_specific.py
tests/legacy/: conftest.py  legacy_cli.py
tests/scope/: __init__.py  conftest.py  test_combinations.py  test_filter_scope.py  test_home_scope.py  test_workspace_scope.py
tests/stats/: __init__.py  conftest.py  test_counts.py  test_grouping.py  test_invariants.py  test_parity_stats_cli.py  test_tools.py
tests/unit/: test_api.py  test_claude_history.py  test_cli_combinatorial.py  test_dispatcher_parity.py  test_fluent.py  (+5 more)
(+134 files in other folders)
