[project]
name = "claude-history"
version = "1.0.0"
description = "CLI tool to browse and export Claude Code conversation history"
requires-python = ">=3.7"

[tool.ruff]
target-version = "py37"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict parameter
    "UP007",  # use X | Y for union types (not available in 3.7)
    "B007",   # unused loop control variable (common pattern with tuple unpacking)
    "B023",   # function uses loop variable (intentional in closures)
    "E402",   # module import not at top (sqlite3 imported where needed)
]

[tool.ruff.lint.isort]
known-first-party = ["claude_history"]
