[project]
name = "claude-history"
version = "1.0.0"
description = "CLI tool to browse and export Claude Code conversation history"
requires-python = ">=3.8"

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # Pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "B",         # flake8-bugbear
    "C4",        # flake8-comprehensions
    "C90",       # mccabe complexity
    "PL",        # pylint
    "RUF",       # Ruff-specific
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function calls in argument defaults
    "B905",    # zip without explicit strict parameter
    "UP007",   # use X | Y for union types (not available in 3.7)
    "B007",    # unused loop control variable (common pattern with tuple unpacking)
    "B023",    # function uses loop variable (intentional in closures)
    "E402",    # module import not at top (sqlite3 imported where needed)
    "RUF013",  # implicit Optional (requires 3.10+ for clean syntax)
    "PLC0415", # import not at top (intentional lazy imports)
]

[tool.ruff.lint.per-file-ignores]
# Test files commonly use magic values, many arguments, mock classes
"test_*.py" = ["PLR2004", "PLR0913", "PLR0915", "N802", "N803", "RUF012"]
# Main script has some complexity that's baselined
"claude-history" = ["PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004", "C901"]
# Scripts use magic values and have some complexity
"scripts/*.py" = ["PLR2004", "PLW1510", "C901", "PLR0915"]

[tool.ruff.lint.isort]
known-first-party = ["claude_history"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 15
max-returns = 8
max-statements = 60

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "radon>=6.0.1",
    "hypothesis>=6.100.0",
]

# Radon complexity thresholds (documented here, enforced in scripts/check_complexity.py)
# CC grades: A (1-5), B (6-10), C (11-20), D (21-30), E (31-40), F (41+)
# MI grades: A (20-100), B (10-19), C (0-9)
#
# Stringent thresholds enforced:
# - New functions: max complexity C (<=20), reject D/E/F
# - Existing high-complexity functions are tracked for refactoring
# - Maintainability index: warn on C grade (0-9)
